# My_repo_mlp

./: app.py  cnn.py  data.py  mlp.py  mlp_architecture.py  mlp_emnist.pth  mlp_emnist_1.pth  mlp_mnist.pth  pyproject.toml  train.py
templates/: index.html  viz.html
